--- a/src/components/product-info/styles.scss
+++ b/src/components/product-info/styles.scss
@@ -1,5 +1,34 @@
+@import '../../framework/scss/breakpoints.scss';
+
 .product-info {
   display: block;
-  max-width: 800px;
-  padding-right: 25px;
+  margin: 0 20px;
+
+  @include breakpoint(large) {
+    margin: 0;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column-reverse;
+    opacity: 0;
+
+    @include breakpoint(large) {
+      flex-direction: row;
+      margin: 0 40px 0 0;
+      padding-right: 25px;
+    }
+
+    &--is-loaded {
+      opacity: 1;
+      transition: all 0.5s ease;
+    }
+  }
+}
+.description {
+  border-bottom: 2px solid #000;
+  border-top: 2px solid #000;
+  font-style: italic;
+  line-height: 1.6;
+  padding: 20px 0;
 }
