added logo, fix with header and heading

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,5 +1,11 @@
 .header {
   background: #000e22;
+  display: flex;
   height: 100px;
+  justify-content: center;
   width: 100%;
+
+  &__logo {
+    height: 100%;
+  }
 }
