--- a/src/components/product-list-item/styles.scss
+++ b/src/components/product-list-item/styles.scss
@@ -1,5 +1,8 @@
 .product-list-item {
+  border-bottom: 2px solid #000e22;
+  border-bottom-right-radius: 10px;
   cursor: pointer;
+  margin-bottom: 30px;
 
   &__wrapper {
     align-items: center;
