--- a/src/framework/scss/globals.scss
+++ b/src/framework/scss/globals.scss
@@ -1,4 +1,10 @@
 @import './breakpoints.scss';
+@import './font-book.scss';
+
+body {
+  margin: 0;
+  padding: 0;
+}
 
 @mixin GridWrapper() {
   display: grid;
