--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -24,6 +24,7 @@
     cursor: pointer;
     float: right;
     height: 40px;
+    margin: 10px 10px 0 0;
     position: relative;
     width: 40px;
 
@@ -56,8 +57,6 @@
 
     @include breakpoint(medium) {
       @include GridContent();
-      padding: 30px;
-      width: calc(100% - 60px);
     }
   }
 }
