--- a/src/components/price-tag/styles.scss
+++ b/src/components/price-tag/styles.scss
@@ -1,13 +1,34 @@
+@import '../../framework/scss/breakpoints.scss';
+
 .price-tag {
-  position: absolute;
-  right: 0;
+  h3 {
+    font-weight: 400;
+  }
+
+  .product-info & {
+    @include breakpoint(medium) {
+      position: absolute;
+      right: 0;
+    }
+  }
+
   .product-heading--is-list-item & {
     background: #000e22;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color: #fff;
-    padding: 20px;
+    padding: 0 10px;
+    position: absolute;
+    right: 0;
+
+    @include breakpoint(medium) {
+      padding: 0 20px;
+    }
   }
 
-  font-weight: 400;
+  @include breakpoint(medium) {
+    .product-heading--is-list-item:hover & {
+      background: rgba(#000e22, 0.6);
+    }
+  }
 }
