--- a/src/framework/scss/font-book.scss
+++ b/src/framework/scss/font-book.scss
@@ -3,3 +3,17 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+h3 {
+  font-size: 14px;
+  @include breakpoint(medium) {
+    font-size: 18px;
+  }
+}
+
+p {
+  font-size: 12px;
+  @include breakpoint(medium) {
+    font-size: 16px;
+  }
+}
