--- a/src/components/product/product-info/styles.scss
+++ b/src/components/product/product-info/styles.scss
@@ -1,4 +1,4 @@
-@import '../../framework/scss/breakpoints.scss';
+@import '../../../framework/scss/breakpoints.scss';
 
 .product-info {
   display: block;
