--- a/src/components/product/product-list-item/styles.scss
+++ b/src/components/product/product-list-item/styles.scss
@@ -1,4 +1,4 @@
-@import '../../framework/scss/breakpoints.scss';
+@import '../../../framework/scss/breakpoints.scss';
 
 .product-list-item {
   border-bottom: 1px solid #000e22;
