--- a/src/components/product/product-heading/styles.scss
+++ b/src/components/product/product-heading/styles.scss
@@ -1,4 +1,4 @@
-@import '../../framework/scss/breakpoints.scss';
+@import '../../../framework/scss/breakpoints.scss';
 
 .product-heading {
   align-items: center;
