added loading functionality

--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -2,6 +2,7 @@
 @import '../../framework/scss/breakpoints.scss';
 
 .modal {
+  display: none;
   background-color: rgba(#000, 0.4);
   bottom: 0;
   height: 100%;
