--- a/src/components/product/info/styles.scss
+++ b/src/components/product/info/styles.scss
@@ -4,7 +4,7 @@
   display: block;
   margin: 0 20px;
   opacity: 0;
-  padding: 10px;
+  padding: 60px 10px 10px 10px;
 
   @include breakpoint(medium) {
     margin: 30px;
@@ -22,6 +22,12 @@
 
     @include breakpoint(large) {
       flex-direction: row;
+    }
+  }
+
+  &__text {
+    @include breakpoint(large) {
+      margin-right: 40px;
     }
   }
 
