header fix + added some to readme

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,5 +1,7 @@
+@import '../../framework/scss/globals.scss';
+
 .header {
-  background: #000e22;
+  background: $darknavy;
   display: flex;
   height: 100px;
   justify-content: center;
